# sheaf-gossip

./: AGENT.md  Cargo.toml  README.md
src/: convergence.rs  gossip_schedule.rs  lib.rs  obstruction.rs  reconcile.rs  room_graph.rs  sheaf_state.rs
tests/: integration.rs
