[package]
name = "sheaf-gossip"
version = "0.1.0"
edition = "2021"
description = "Bridges sheaf cohomology to room gossip protocols — sheaf obstructions drive the gossip schedule"
license = "MIT"
repository = "https://github.com/SuperInstance/sheaf-gossip"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
